# vision-vru

./: .gitignore  CMakeLists.txt  HOWTO_calibration.md  README.md
configs/: vision_vru.json
configs/cfg/: ObjectFusionServc_server_unified.json
include/: coco_classes.hpp  config.hpp  trackedobject.hpp
src/: calibrator.cpp  simple_webcam_test.cpp  vision_vru.cpp
